--- a/WebPortalAPI/WebPortalAPI.csproj
+++ b/WebPortalAPI/WebPortalAPI.csproj
@@ -12,6 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\admin\Data\" />
+    <Folder Include="Areas\admin\Models\" />
     <Folder Include="Areas\Identity\Services\" />
   </ItemGroup>
 
