--- a/WebPortalAPI/WebPortalAPI.csproj
+++ b/WebPortalAPI/WebPortalAPI.csproj
@@ -386,6 +386,9 @@
     <Content Update="Areas\Admin\Views\Shared\_CookieConsentPartial.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
+    <Content Update="Areas\Admin\Views\Shared\Devices.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
     <Content Update="Areas\Admin\Views\Shared\_Layout.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
