--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,4 +19,4 @@ steps:
 - task: PublishBuildArtifacts@1
   inputs:
     pathtoPublish: '$(Build.ArtifactStagingDirectory)' 
-    artifactName: 'WebPortalAPI.web' 
+    artifactName: 'Apt3kStudio.Web' 
